# PAIRSim_ws

./: .gitignore  README.md  data.csv
src/Coupled_ADRC/: CMakeLists.txt  package.xml
src/Coupled_ADRC/include/: ADRC_lat_control_node.hpp  Coupled_ADRC.hpp
src/Coupled_ADRC/params/: ADRC_coupled_control.params.yaml  ADRC_lat_control.params.yaml
src/Coupled_ADRC/src/: ADRC_lat_control_node.cpp  Coupled_ADRC.cpp
src/accel_intf/: CMakeLists.txt  package.xml
src/accel_intf/config/: alec_param.yaml  cgs_param.yaml  granny.yaml  lvms_param.yaml  params.yaml
src/accel_intf/include/: acceleration_interface.h  acceleration_interface_node.hpp  rtwtypes.h
src/accel_intf/src/: acceleration_interface.cpp  acceleration_interface_data.cpp  acceleration_interface_node.cpp  main.cpp
src/accel_intf/test/: test_acceleration_interface_node.cpp  test_braking.cpp  test_gear_change.cpp  test_graceful_and_parking_brake.cpp  test_throttle.cpp  testing_helper_node.hpp  testing_helpers.hpp
src/fbl_mpc/: CMakeLists.txt  README.md  data.csv  package.xml
src/fbl_mpc/params/: aw_params.yaml  cgs_params.yaml
src/fbl_mpc/scripts/: bicycle_model.py  fbl_mpc.py  gg_plot.py  slip_plot.py  test_bicycle.py
src/ferdinand_controller/: CMakeLists.txt  ferdinand_plotjuggler_layout.xml  package.xml
src/ferdinand_controller/include/: ferdinand_controller.hpp  system_dynamics.hpp
src/ferdinand_controller/params/: ferdinand_2.params.yaml  ferdinand_controller.params.yaml  ferdinand_oval.yaml  ferdinand_road.yaml
src/ferdinand_controller/src/: ferdinand_controller.cpp
src/kin_control/: CMakeLists.txt  package.xml
src/kin_control/config/: params.yaml
src/kin_control/include/: kin_control.hpp
src/kin_control/src/: kin_control_node.cpp
src/long_control/: CMakeLists.txt  package.xml
src/long_control/config/: params.yaml
src/long_control/include/: PID.hpp  deccel_stop.hpp  long_control.hpp
src/long_control/src/: PID.cpp  long_control_node.cpp
src/mpc/: CMakeLists.txt  package.xml
src/mpc/scripts/: MPC.py  long_mpc.py
src/pairsim_bridge/: CMakeLists.txt  package.xml
src/pairsim_bridge/params/: simulator.yaml
src/pairsim_bridge/scripts/: repub_ct_node.py  repub_ekf_node.py  repub_node.py  teleop_node.py
src/planner_emulator/: CMakeLists.txt  package.xml
src/planner_emulator/config/: maps.yaml
src/planner_emulator/maps/: LOR_centerline.csv  ims_centerline.csv  kentucky_centerline.csv  monza.csv  vegas_centerline.csv
src/planner_emulator/scripts/: global_path_publisher.py  transform_path.py
src/ros2_msgs/blackandgold_msgs/: CMakeLists.txt
src/ros2_msgs/blackandgold_msgs/msg/: ADRC.msg  BasestationCommand.msg  BoundingBoxWithPath.msg  BoundingBoxWithPathArray.msg  ErrorReport.msg  StanleyADRCDebug.msg
src/ros2_msgs/deep_orange_msgs/: CHANGELOG.txt  CMakeLists.txt  package.xml
src/ros2_msgs/deep_orange_msgs/msg/: BaseToCarSummary.msg  BrakeTempReport.msg  CtReport.msg  DiagnosticReport.msg  JoystickCommand.msg  LapTimeReport.msg  MiscReport.msg  ObstacleArray.msg  ObstacleState.msg  PtReport.msg  RaceControlPosReport.msg  RcToCt.msg  Telemetry.msg  TireReport.msg
src/ros2_msgs/raptor_dbw_msgs/: CMakeLists.txt
src/ros2_msgs/raptor_dbw_msgs/msg/: Brake2Report.msg
src/sim_launch/: CMakeLists.txt  package.xml
src/sim_launch/launch/: launch_controller.launch.py  launch_on-vehicle_bridge.launch.py  launch_pairsim.launch.py  launch_planner.launch.py  launch_sim.launch.py  launch_teleop.launch.py
