<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pairsim_bridge</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ye372@purdue.edu">alvin yethal</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>nav_msgs</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

    <!-- Add message dependencies -->
  <build_depend>blackandgold_msgs</build_depend>
  <exec_depend>blackandgold_msgs</exec_depend>
  <build_depend>autonoma_msgs</build_depend>
  <exec_depend>autonoma_msgs</exec_depend>
  <build_depend>deep_orange_msgs</build_depend>
  <exec_depend>deep_orange_msgs</exec_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>
  <build_depend>autoware_auto_msgs</build_depend>
  <exec_depend>autoware_auto_msgs</exec_depend>
  <build_depend>raptor_dbw_msgs</build_depend>
  <exec_depend>raptor_dbw_msgs</exec_depend>
  <build_depend>ros2launch</build_depend>
  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
