<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sim_launch</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="brow1633@purdue.edu">ethan</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <!-- <exec_depend>ros_sim</exec_depend> -->

  <exec_depend>ferdinand_controller</exec_depend>
  <exec_depend>kin_control</exec_depend>
  <exec_depend>long_control</exec_depend>
  <exec_depend>accel_intf</exec_depend>
  <exec_depend>adrc_controller</exec_depend>
  <exec_depend>mpc</exec_depend>


  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
